--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,7 @@
 .DS_Store
 
 # Created by https://www.toptal.com/developers/gitignore/api/intellij+all,gradle,java
-# Edit at https://www.toptal.com/developers/gitignore?templates=intellij+all,gradle,java
+# Edit at https://www.toptal.com/developers/gitignore?templates=intellij+all,gradle,javafgdg
 
 ### Intellij+all ###
 # Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio, WebStorm and Rider
