--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,8 +1,8 @@
 spring:
   datasource:
-    url: jdbc:mysql://localhost:3306/test?characterEncoding=utf8
+    url: jdbc:mysql://localhost:4400/tlover?characterEncoding=utf8
     username: root
-    password: 1234
+    password: root
     driver-class-name: com.mysql.cj.jdbc.Driver
 
   mvc:
@@ -21,4 +21,11 @@ spring:
         #default_batch_fetch_size: 100
     #open-in-view: false
     database-platform: org.hibernate.dialect.MySQL5Dialect
+
+  security:
+    oauth2:
+      client:
+        provider:
+          naver:
+            user-info_uri: https://openapi.naver.com/v1/nid/me
 
