--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,8 +1,8 @@
 spring:
   datasource:
-    url: jdbc:mysql://localhost:4400/tlover?characterEncoding=utf8
-    username: root
-    password: root
+    url: jdbc:mysql://localhost:3306/tlover?characterEncoding=utf8
+    username: tlover
+    password: tlover
     driver-class-name: com.mysql.cj.jdbc.Driver
 
   mvc:
