--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,14 +1,9 @@
 spring:
   datasource:
-<<<<<<< HEAD
-    url: jdbc:mysql://localhost:3306/tlover?characterEncoding=utf8
-    username: tlover
-    password: tlover
-=======
-    url: jdbc:mysql://localhost:3306/trover?characterEncoding=utf8
-    username: root
-    password: root
->>>>>>> 89f3cf49d48a54f43e5c5c124d40d76c432a8c1b
+    url: jdbc:mysql://soldout.cpiugfta2jm5.ap-northeast-2.rds.amazonaws.com:3306/tlover?
+    autoReconnect: true
+    username: admin
+    password: mango1030
     driver-class-name: com.mysql.cj.jdbc.Driver
 
   mvc:
@@ -17,7 +12,7 @@ spring:
 
   jpa:
     hibernate:
-      ddl-auto: create
+      ddl-auto: none
 #      naming:
 #        physical-strategy: org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
     properties:
@@ -34,3 +29,5 @@ spring:
         provider:
           naver:
             user-info_uri: https://openapi.naver.com/v1/nid/me
+          google:
+            user-info_uri: https://oauth2.googleapis.com/tokeninfo
