--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,6 @@
 services:
   application:
-    image: Qbeom0925/tlover-server
+    image: rbqja123/tlover-server
     environment:
       SPRING_DATASOURCE_URL: jdbc:mysql://soldout.cpiugfta2jm5.ap-northeast-2.rds.amazonaws.com:3306/tlover?
       SPRING_DATASOURCE_USERNAME: admin
