다이어리 스크랩 랭킹순, 페이지별로 가져오기 추가, 해당 유저의 해당 다이어리 스크랩 여부 확인하기 추가

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,3 +1,5 @@
+version: "3"
+
 services:
   application:
     image: rbqja123/tlover-server
@@ -9,5 +11,3 @@ services:
     ports:
       - 8080:8080
     container_name: tlover-server
-networks:
-  - tlover-network:
