--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -5,6 +5,8 @@ spring:
     username: admin
     password: mango1030
     driver-class-name: com.mysql.cj.jdbc.Driver
+    initialization-mode: always
+    initialize: true
   servlet:
     multipart:
       max-file-size: 10MB
@@ -26,6 +28,7 @@ spring:
         #default_batch_fetch_size: 100
     #open-in-view: false
     database-platform: org.hibernate.dialect.MySQL5Dialect
+    defer-datasource-initialization: true
 
   security:
     oauth2:
