--- a/build.gradle
+++ b/build.gradle
@@ -57,6 +57,8 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-batch'
     implementation 'org.springframework.boot:spring-boot-starter-quartz'
 
+    implementation 'org.flywaydb:flyway-core:6.4.2'
+
 
 }
 
