--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,9 +4,9 @@ services:
   application:
     image: rbqja123/tlover-server
     environment:
-      SPRING_DATASOURCE_URL: jdbc:mysql://soldout.cpiugfta2jm5.ap-northeast-2.rds.amazonaws.com:3306/tlover?
-      SPRING_DATASOURCE_USERNAME: admin
-      SPRING_DATASOURCE_PASSWORD: mango1030
+      SPRING_DATASOURCE_URL: jdbc:mysql://tloverdb.cjgvxgjzvddh.ap-northeast-2.rds.amazonaws.com:3306/tloverdb?
+      SPRING_DATASOURCE_USERNAME: tlover
+      SPRING_DATASOURCE_PASSWORD: tlover123!!
       TZ: Asia/Seoul
     ports:
       - 8080:8080
